lingo/lingo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lingo
  name: lingo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lingo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lingo
    spec:
      containers:
        - image: ghcr.io/rubenhensen/lingo:master
          name: lingo
          ports:
            - containerPort: 8001
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      restartPolicy: Always
