lingo/lingo-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lingo-frontend
  name: lingo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lingo-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lingo-frontend
    spec:
      containers:
        - image: ghcr.io/rubenhensen/lingo-frontend:master
          name: lingo-frontend
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      restartPolicy: Always
