lingo/lingo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lingo-api
  name: lingo-api
spec:
  ports:
    - name: "api"
      port: 8000
      targetPort: 80
  selector:
    app: lingo-api
