lingo/lingo-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lingo-frontend
  name: lingo-frontend
spec:
  ports:
    - name: "frontend"
      port: 8001
      targetPort: 80
  selector:
    app: lingo-frontend
