lingo/lingo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lingo
  name: lingo
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    app: lingo
