lingo/lingo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lingo-ingress
  annotations:
    cert-manager.io/cluster-issuer: prod-cluster-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: lingo.hensen.io
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: lingo
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lingo
            port:
              number: 8001
  tls:
    - secretName: letsencrypt-prod
      hosts:
        - lingo.hensen.io
